# MathOS

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SPEC.md  mcl.toml.example  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  comparator-platform-probe.yml  publication.yml
docs/administrative-controls/: GITFLOW.md  TDD.md
docs/architecture/: SYSTEM_OVERVIEW.md  TRUST_MODEL.md
docs/decisions/: ADR-0001-local-first-modular-monolith.md  ADR-0002-rfc8785-canonical-json.md  ADR-0003-hash-chained-run-events.md  ADR-0004-mcp-stdio-and-official-rust-sdk.md  ADR-0005-contained-local-lean-execution.md  (+11 more)
migrations/: 0001_initial.sql  0002_idempotency.sql  0003_record_invariants.sql  0004_edge_invariants.sql  0005_run_event_invariants.sql  0006_environment_invariants.sql  0007_artifact_invariants.sql  0008_verifier_jobs.sql  0009_evidence_invariants.sql  0010_publication_ingestion.sql  0011_publication_authority.sql  0012_comparator_authority.sql
policies/: comparator-authority-1.json  lean-local-audit-1.json  lean-publication-1.json  lean-publication-1.sha256
scripts/: comparator-authority-ingest.sh  comparator-network-probe.py  comparator-protected-run.sh  publication-attestation-verify.sh  publication-candidate.sh  publication-ingest.sh  publication-smoke.sh  release-pilot-a.sh
src/: app.rs  canonical.rs  comparator_authority.rs  comparator_export.rs  comparator_run.rs  config.rs  corpus_export.rs  error.rs  lib.rs  main.rs  publication_attestation.rs  release.rs  rl_export.rs
tests/: helpers.py  lean_worker.rs  mcp_stdio.rs  phase1_cli.rs  test_adversarial.py  test_claim_engine.py  test_cli.py  test_finite_verifier.py  test_mcp.py
(+158 files in other folders)
