[package]
name = "mcl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first mathematical claim engine"
license-file = "LICENSE"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.9"
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
tempfile = "3"
