[package]
name = "mcl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first mathematical claim engine"
license-file = "LICENSE"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rmcp = { version = "=2.2.0", default-features = false, features = ["macros", "server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.10"
tempfile = "3"
toml = "0.9"
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["serde", "v7"] }
